--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ categories = ["os", "no-std"]
 
 [dependencies]
 bootloader = "0.9"
+lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
+spin = "0.9.8"
+volatile = "0.2.6"
 
 [lints]
 clippy.as_conversions = "deny"
